# ACAD-MGR

./: .editorconfig  .env.example  .gitignore  .prettierignore  AGENTS.md  DESIGN.md  Makefile  README.md  compose.yml  skills-lock.json
apps/server/: Cargo.toml  Dockerfile
apps/server/config/: config.toml
apps/server/config/migrations/: 20260615172458_countries-seeding.sql  20260615173341_university-organization.sql  20260615205301_administrators.sql  20260615205301_users.sql  20260615205609_academic-categories-and-options.sql  20260615210745_university-acad-work-positions.sql  20260615214732_academics.sql  20260615220000_sessions.sql  20260710013745_research-categories.sql  20260710014151_research-works.sql  20260710015605_work-authorships.sql  20260713122918_journal-issn.sql  20260719120000_academics-updated-at.sql  20260720120000_research-lines.sql  20260721120000_work-overrides.sql
apps/server/config/scripts/: entrypoint.sh
apps/server/docs/: academic.yaml  auth.yaml  university.yaml
apps/server/src/: main.rs
apps/server/src/academic/: errors.rs  mod.rs
apps/server/src/academic/academics/: controller.rs  dtos.rs  entity.rs  events.rs  mod.rs  repository.rs  service.rs  views.rs
apps/server/src/academic/categories/: controller.rs  dtos.rs  entity.rs  repository.rs  service.rs
apps/server/src/auth/: controller.rs  dtos.rs  entity.rs  errors.rs  interceptor.rs  mod.rs  repository.rs
apps/server/src/imports/: mod.rs
apps/server/src/research/: mod.rs
apps/server/src/shared/: countries.rs  database.rs  errors.rs  extensions.rs  id.rs  jsonwebtoken.rs  logger.rs  mod.rs  seeder.rs
apps/server/src/university/: errors.rs  mod.rs
(+282 files in other folders)
