[package]
name = "orcid-acad-mgr-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "orcid-acad-mgr-server"
path = "src/main.rs"

[[bin]]
name = "openalex-seeder"
path = "bin/openalex-seeder/main.rs"

[[bin]]
name = "issn-seeder"
path = "bin/issn-seeder/main.rs"

[[bin]]
name = "research-lines-seeder"
path = "bin/research-lines-seeder/main.rs"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }

sword = { git = "https://github.com/sword-web/sword.git", features = [
    "web",
    "validation-validator",
    "web-multipart",
    "web-swagger-ui",
    "events-in-memory",
] }

sword-layers = { git = "https://github.com/sword-web/sword.git", package = "sword-layers", features = ["cors"] }

sqlx = { version = "0.8.6", features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio",
    "uuid",
] }

time = "0.3.47"
csv = "1.3"
tracing = "0.1.44"
tower-http = { version = "0.6.8", features = ["trace", "tracing"] }

thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
validator = { version = "0.20.0", features = ["derive"] }
bcrypt = "0.19.2"
bon = "3.9.3"
sha2 = "0.11.0"
regex = "1.12.4"
papers-openalex = "0.3.1"
html-escape = "0.2.14"
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls"] }
zip = "2"
reqwest = { version = "0.12.23", features = ["stream"] }
